# aera

./: .dockerignore  .gitignore  CONTROL_RATE_SPEC.md  Dockerfile  README.md  SIM2REAL_DR_TODO.md  pyproject.toml  reinforce.pstats
aera/: setup.py
aera/autonomous/: README.md  obs_augmentation.py  test_obs_augmentation.py
aera/autonomous/basic_rl/reinforce/: __init__.py  common.py  reinforce_config.py  reinforce_policy.py  reinforce_trainer.py
aera/autonomous/basic_rl/sbx/: sac_trainer.py
aera/autonomous/envs/: __init__.py  ar4_mk3_base.py  ar4_mk3_config.py  ar4_mk3_pick_and_place.py  ar4_mk3_robot_interface.py  kinematic_grasp.py  test_env.py
aera/autonomous/openpi/: data_transform.py  dataset_transforms.py  training_config.py
aera/autonomous/openpi/eval/: metrics.py  suite.py
aera/autonomous/openpi/scripts/: analyze_skip_intervals.py  compute_norm_stats.py  create_subset_dataset.py  eval_variance.py  eval_worker.py  merge_datasets.py  plot_smoothing_comparison.py  preview_obs_augmentation.py  run_policy_on_env.py  run_runpod_eval.sh  run_runpod_train.sh  serve_policy.py  test_transform_skip_dataset.py  train.py  (+1 more)
aera_semi_autonomous/: semi_autonomous.repos
ar4_mk3/annin_ar4_driver/launch/: driver.launch.py  driver.launch_delayed.py
ar4_mk3/annin_ar4_firmware/AR4_teensy/: AR4_teensy.ino
ar4_mk3_drivers/annin_ar4_driver/config/: controller_update_rate.yaml  controllers.yaml
autodesk_scripts/: physical_parts.py
autonomous/: README.md  setup.py
autonomous/envs/: __init__.py  ar4_mk3_base.py  ar4_mk3_pick_and_place.py  test_env.py
docker/: .dockerignore  Dockerfile.runpod  Dockerfile.train  README_DOCKER.md  docker-compose.train.yml  start.sh
scripts/: demo_ar4_mk3_control.py  download_paintings.py  download_textures.py  fetch_props.py  generate_pla_block_mesh.py  generate_pla_textures.py  generate_props_xml.py  normalize_props.py
semi_autonomous/: pull_ros_packages.sh  requirements.txt  semi_autonomous.repos
semi_autonomous/aera_semi_autonomous/: MUJOCO_LOG.TXT  package.xml  setup.cfg  setup.py
semi_autonomous/aera_semi_autonomous/aera_semi_autonomous/: aera_semi_autonomous_node.py  point_cloud_conversion.py
semi_autonomous/aera_semi_autonomous/config/: camera.yaml
semi_autonomous/aera_semi_autonomous/data/: domain_rand_config_generator.py
semi_autonomous/aera_semi_autonomous/launch/: run.launch.py
semi_autonomous/aera_semi_autonomous/notebooks/: trajectory_inspector.ipynb
semi_autonomous/aera_semi_autonomous/scripts/: aruco_markers.py  collect_home_offset.sh  collect_mixed.sh  collect_trajectories.py  compress_existing_trajectories.py  convert_data_to_lerobot.py  demo_ar4_mk3_control.py  demo_ar4_mk3_control_headless.py  demo_pick_and_place.py  run_policy_on_env.py  sweep_ik_params.py  sweep_recovery_compat.py
semi_autonomous/aera_semi_autonomous/test/: test_ar4_mk3_robot_interface.py  test_command_processor.py  test_manipulation_handler.py  test_point_cloud_processor.py  test_trajectory_data_collector.py
training_journal/06.07.2026/: NOTES.md  mlflow.db
vla/: README.md
(+24 files in other folders)
