[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aera"
version = "0.1.0"
description = "Autonomous robotics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gymnasium",
    "gymnasium-robotics",
    "mujoco",
    "numpy",
    "matplotlib",
    "etils[epath]",
    "flax",
    "jax",
    "mlflow",
    "optax",
    "tqdm-loggable",
    "tyro",
    "typing-extensions",
    "openpi",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aera*"]
