[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aera"
version = "0.1.0"
description = "Autonomous robotics"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gymnasium",
    "gymnasium-robotics",
    "mujoco",
    "numpy",
    "lerobot==0.4.2",
    "matplotlib",
    "etils[epath]",
    "flax",
    "jax",
    "jax[cuda12]",
    "jax_cuda12_plugin",
    "mlflow",
    "mujoco==3.3.7",
    "optax",
    "tqdm-loggable",
    "transformers",
    "tyro",
    "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aera*"]
