[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aera"
version = "0.1.0"
description = "Autonomous robotics"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gymnasium==1.2.1",
    "gymnasium-robotics==1.4.1",
    mujoco==3.3.7",
    "numpy==2.3.4",
    "lerobot==0.4.2",
    "matplotlib==3.10.7",
    "etils[epath]==1.13.0",
    "flax==0.10.2",
    "jax==0.5.3",
    "jax[cuda12]==0.5.3; sys_platform == 'linux'",
    "jax_cuda12_plugin; sys_platform == 'linux'",
    "mlflow==3.7.0",
    "open3d==0.19.0",
    "sortedcontainers==2.4.0",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.13",
    "pytest==8.4.2",
    "tqdm-loggable==0.2",
    "transformers==4.53.2",
    "tyro==0.9.35",
    "typing-extensions==4.15.0",
    "openpi",
]
[tool.uv.sources]
openpi = { git = "https://github.com/WiktorJ/openpi.git", rev = "95bec952ce3177c6cb0f204479676884e18fb7f4" }

[tool.setuptools.packages.find]
where = ["."]
include = ["aera*"]
